# breeze-asr-rs

./: Cargo.toml  README.md
breeze-asr-rs/src/: model.rs
breeze-asr-rs/tests/: integration_test.rs
examples/: simple_infer.rs  test_stream.rs
src/: audio.rs  lib.rs  model.rs  tokenizer.rs  vad.rs
tests/: integration_test.rs
