[package]
name = "breeze-asr-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust-based library for MediaTek Breeze ASR (Whisper-large-v2 finetune) using ONNX Runtime."
license = "MIT"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray", "load-dynamic"] }
ndarray = "0.16"
hound = "3.5.1"
rubato = "0.16.0"
rustfft = "6.2.0"
hf-hub = "0.4.3"
regex = "1.10.2"
thiserror = "2.0.17"
anyhow = "1.0"
base64 = "0.22"

# Stream dependencies
voice_activity_detector = { version = "0.2.1", optional = true }
futures = { version = "0.3.31", optional = true }
async-stream = { version = "0.3.6", optional = true }

[features]
default = []
stream = ["dep:voice_activity_detector", "dep:futures", "dep:async-stream"]

[dev-dependencies]
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
